// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Move: Init-Task > expect failure - package missing package.json 1`] = `
"[STARTED] Validating source path
[FAILED] Rehearsal could not find the package: \\"src\\" in project: \\"<tmp-path>\\" OR the package does not have a package.json file."
`;

exports[`Move: Init-Task > expect failure - source directory arg not in project 1`] = `
"[STARTED] Validating source path
[FAILED] Rehearsal could not find source: /dir/dont/exist/in/project in project: <tmp-path>"
`;

exports[`Move: Init-Task > expect failure - source package arg not in project 1`] = `
"[STARTED] Validating source path
[FAILED] Rehearsal could not find the package: \\"module-nope\\" in project: \\"<tmp-path>\\" OR the package does not have a package.json file."
`;

exports[`Move: Init-Task > project should init with source directory arg 1`] = `
"[STARTED] Validating source path
[SUCCESS] Validating source path"
`;

exports[`Move: Init-Task > project should init with source file arg 1`] = `
[
  "<tmp-path>/src/foo/buz/biz.js",
]
`;

exports[`Move: Init-Task > project should init with source file arg 2`] = `
"[STARTED] Validating source path
[SUCCESS] Validating source path"
`;

exports[`Move: Init-Task > project should init with source project arg and graph 1`] = `
"[STARTED] Validating source path
[SUCCESS] Validating source path"
`;
